--- a/Website/index.html
+++ b/Website/index.html
@@ -7,24 +7,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Roast-Bot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
-    <div id="mainTop">
-        <div id="top"><button id="commands">Commands</button><button id="info">Info</button><button id="commandHelp">Command Help</button></div>
-
-        <img src="rbtop.PNG" width = "30px" height = "30px">
-
-        <b><h1>Roast-Bot</h1></b>
-
-    </div>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><img src = "rbtop.PNG" style = "width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Commands</a>
+                <a class="nav-item nav-link" href="#">Info</a>
+                <a class="nav-item nav-link" href="#">Command Help</a>
+                <a class="nav-item nav-link" href="#">Leaderboards</a>
+            </div>
+        </div>
+    </nav>
 
     <img id="roastBotImg" src="roastBotImg.PNG"><img>
-
 
     <div id="mainText">
 
@@ -34,7 +43,14 @@
                 <i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
                 <hr width="250px">
 
-                <br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people. With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot would have.<br><br>In "Info" there is info about Roast-Bot, upcoming updates, and past updates. The "command" tab gives updated information on Roast-Bot commands and simple command usage like what <code style="background-color: #ffddcc">rb!help</code> gives. Finally the "Command Help" tab gives detailed information about Roast-Bot commands, much like what is returned by using <code style="background-color: #ffddcc">rb!&lt;commamd&gt; help</code>.<br><br><br>Enjoy using Roast-Bot, if you have any questions or feedback join the Roast-Bot help server:<br><br><a href="https://discordapp.com/invite/9y8yV42">Invite Link</a>.</p>
+                <br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living
+                    hell out of people. With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot
+                    would have.<br><br>In "Info" there is info about Roast-Bot, upcoming updates, and past updates. The "command"
+                    tab gives updated information on Roast-Bot commands and simple command usage like what <code style="background-color: #ffddcc">r!help</code>                    gives.
+                    Finally the "Command Help" tab gives detailed information about Roast-Bot commands, much like what is
+                    returned by using <code style="background-color: #ffddcc">r!&lt;commamd&gt; help</code>.<br><br><br>Enjoy
+                    using Roast-Bot, if you have any questions or feedback join the Roast-Bot help server:<br><br><a href="https://discordapp.com/invite/9y8yV42">Invite
+                        Link</a>.</p>
     </div>
 
 </body>
