--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src = "rbtop.PNG" style = "width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+        <a class="navbar-brand" href="#"><img src = "Website/rbtop.PNG" style = "width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <img id="roastBotImg" src="roastBotImg.PNG"><img>
+    <img id="roastBotImg" src="Website/roastBotImg.PNG"><img>
 
     <div id="mainText">
 
