--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <img id="roastBotImg" src="Website/roastBotImg.PNG"><img>
+    <img width = "350px" height = "350px" id="roastBotImg" src="Website/roastBotImg.PNG"><img>
 
     <div id="mainText">
 
