--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </div>
     </nav>
 
-    <img width = "300px" height = "300px" id="roastBotImg" src="Website/roastBotImg.PNG"><img>
+    <img id="roastBotImg" src="Website/roastBotImg.PNG" width = "300" height = "300">
 
     <div id="mainText">
 
-        <b><h1>Roast-Bot:</h1><b>
+        <b><h1>Roast-Bot:</h1></b>
                 <h3>Roasting, Memes and More.</h3>
                 <br>
                 <i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
