--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="Website/main.css" />
     <script src="Website/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <link rel="icon" type="image/png" href="Website/roastBotImg.PNG">
 </head>
 
 <body>
