--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 </head>
 
 <body>
+    
+    <!-- Taken from Bootstrap Website and modified by me -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#"><img src = "Website/rbtop.PNG" style = "width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
@@ -34,7 +36,7 @@
         </div>
     </nav>
 
-    <img id="roastBotImg" src="Website/roastBotImg.PNG" width = "300" height = "300">
+    <img id="roastBotImg" src="Website/roastBotImg.PNG">
 
     <div id="mainText">
 
