--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<link rel="icon" type="image/png" href="Website/rbtop.PNG"/>
 	<script src="main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#"><img src="rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="#"><img src="Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -33,7 +34,7 @@
 		</div>
 	</nav>
 
-	<img id="roastBotImg" src="roastBotImg.PNG"><img>
+	<img id="roastBotImg" src="Website/roastBotImg.PNG"><img>
 
 	<div id="mainText">
 
