--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="Website/main.css" />
 	<link rel="icon" type="image/png" href="Website/rbtop.PNG"/>
-	<script src="main.js"></script>
+	<script src="Website/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
