--- a/Website/Command-Help/index.html
+++ b/Website/Command-Help/index.html
@@ -11,23 +11,24 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="Command-Help/main.css" />
 	<script src="Command-Help/main.js"></script>
+	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG"/>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#"><img src="rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="index.html"><img src="../../Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-				<a class="nav-item nav-link" href="#">Commands</a>
-				<a class="nav-item nav-link" href="#">Info</a>
-				<a class="nav-item nav-link active" href="#">Command Help</a>
-				<a class="nav-item nav-link" href="#">Leaderboards</a>
+				<a class="nav-item nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link" href="../../Website/Commands/index.html">Commands</a>
+				<a class="nav-item nav-link" href="../../Website/Info/index.html">Info</a>
+				<a class="nav-item nav-link active" href="../../Website/Command-Help/index.html">Command Help</a>
+				<a class="nav-item nav-link" href="../../Website/Leaderboard/index.html">Leaderboards</a>
 			</div>
 		</div>
 	</nav>
