--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="Website/main.css" />
-	<link rel="icon" type="image/png" href="Website/rbtop.PNG"/>
+	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG"/>
 	<script src="Website/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#"><img src="Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="index.html"><img src="Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
-				<a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
 				<a class="nav-item nav-link" href="Website/Commands/index.html">Commands</a>
 				<a class="nav-item nav-link" href="Website/Info/index.html">Info</a>
 				<a class="nav-item nav-link" href="Website/Command-Help/index.html">Command Help</a>
