--- a/Website/Leaderboard/index.html
+++ b/Website/Leaderboard/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-	<script src="main.js"></script>
-	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG"/>
+	<link rel="stylesheet" type="text/css" media="screen" href="../../Website/Leaderboard/main.css" />
+	<script src="../../Website/Leaderboard/main.js"></script>
+	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG" />
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="index.html"><img src="../../Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-			aria-expanded="false" aria-label="Toggle navigation">
+		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -33,103 +33,108 @@
 		</div>
 	</nav>
 	<br><br><br>
-	<b><h1 style = "text-align: center">XP/Level Leaderboards:</h1></b>
+	<b><h1 style="text-align: center">XP/Level Leaderboards:</h1></b>
 	<br>
-	<hr width = "250px">
+	<hr width="250px">
 	<br>
-	<p id = "main">
-	&nbsp;&nbsp;&nbsp;&nbsp;When Roast-Bot gets XP/Level stats all it gets is your user id, and the guild id. To see if you are on the leaderboard you can either just use <code>r!level</code> or turn on discord developer mode, go to a message you've sent and click on the same thing that you would do to edit a message. From there you should see a button called "Copy user Id". Click that, paste it and compare it to the ID's listed below.
+	<p id="main">
+		&nbsp;&nbsp;&nbsp;&nbsp;When Roast-Bot gets XP/Level stats all it gets is your user id, and the guild id. To see if you are
+		on the leaderboard you can either just use <code>r!level</code> or turn on discord developer mode, go to a message you've
+		sent and click on the same thing that you would do to edit a message. From there you should see a button called "Copy user
+		Id". Click that, paste it and compare it to the ID's listed below.
 	</p>
 	<br>
-	<hr width = "250px">
+	<hr width="250px">
 	<br>
-<table class="table">
-  <thead class="thead-dark">
-	<tr>
-	  <th scope="col">#</th>
-	  <th scope="col">User Id</th>
-	  <th scope="col">Guild Id</th>
-	  <th scope="col">XP</th>
-	  <th scope = "col">Level</th>
-	</tr>
-  </thead>
-  <tbody>
-	<tr>
-	  <th scope="row">1</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  	<td></td>
-	</tr>
-	<tr>
-	  <th scope="row">2</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	  <th scope="row">3</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	<th scope="row">4</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	  <th scope="row">5</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<th scope="row">6</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  	<td></td>
-	</tr>
-	<tr>
-	  <th scope="row">7</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	  <th scope="row">8</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	<th scope="row">9</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-	<tr>
-	  <th scope="row">10</th>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	  <td></td>
-	</tr>
-  </tbody>
+	<table class="table">
+		<thead class="thead-dark">
+			<tr>
+				<th scope="col">#</th>
+				<th scope="col">User Id</th>
+				<th scope="col">Guild Id</th>
+				<th scope="col">XP</th>
+				<th scope="col">Level</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th scope="row">1</th>
+				<td>285992069061672961</td>
+				<td>484897573946130443</td>
+				<td>1025</td>
+				<td>9</td>
+			</tr>
+			<tr>
+				<th scope="row">2</th>
+				<td>229693461492662274</td>
+				<td>316052417378648065</td>
+				<td>667</td>
+				<td>8</td>
+			</tr>
+			<tr>
+				<th scope="row">3</th>
+				<td>232716861932830720</td>
+				<td>263550317751304192</td>
+				<td>395</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">4</th>
+				<td>390315922369282049</td>
+				<td>461362371139469328</td>
+				<td>388</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">5</th>
+				<td>489581331609681930</td>
+				<td>486724641520615425</td>
+				<td>336</td>
+				<td>7</td>
+			</tr>
+			<th scope="row">6</th>
+			<td>220087681542127616</td>
+			<td>476695536465084430</td>
+			<td>209</td>
+			<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">7</th>
+				<td>183628360956510208</td>
+				<td>180388857169182720</td>
+				<td>208</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">8</th>
+				<td>274965301978988544</td>
+				<td>353642324699381761</td>
+				<td>204</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">9</th>
+				<td>357544883621330947</td>
+				<td>353642324699381761</td>
+				<td>201</td>
+				<td>7</td>
+			</tr>
+			<tr>
+				<th scope="row">10</th>
+				<td>178875862878257152</td>
+				<td>180388857169182720</td>
+				<td>196</td>
+				<td>6</td>
+			</tr>
+		</tbody>
 	</table>
 	<br>
-	<p style = "text-align: center"><small><i>Stats Last Updated 2018/10/1 at 3:43 PM</i></small></p>
+	<p style="text-align: center"><small><i>Stats Last Updated 2018/10/1 at 7:34 PM</i></small></p>
 	<br>
-	<hr width = "250px">
+	<hr width="250px">
 	<br><br>
-	<p style = "text-align: center">Want to see yourself up here? Use any command that starts with <code>r!</code> on a server that has Roast-Bot in it. Get high enough level/XP to surpass anyone on this list and you'll be added!</p>
-	</body>
+	<p style="text-align: center">Want to see yourself up here? Use any command that starts with <code>r!</code> on a server
+		that has Roast-Bot in it. Get high enough level/XP to surpass anyone on this list and you'll be added!</p>
+</body>
+
 </html>
