--- a/Website/Info/index.html
+++ b/Website/Info/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-	<script src="main.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="../../Website/Info/main.css" />
+	<script src="../../Website/Info/main.js"></script>
 	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG"/>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
