--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="Website/main.css" />
-	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG"/>
+	<link rel="icon" type="image/png" href = "Website/rbtop.PNG" />
 	<script src="Website/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
@@ -20,7 +20,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="index.html"><img src="Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-			aria-expanded="false" aria-label="Toggle navigation">
+		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -33,20 +33,25 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<img id="roastBotImg" src="Website/roastBotImg.PNG"><img>
 	<br><br>
 	<div id="mainText">
 
 		<b><h1>Roast-Bot:</h1></b>
-				<h3>Roasting, Memes and More.</h3>
-				<br>
-				<i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
-				<hr width="250px">
+		<h3>Roasting, Memes and More.</h3>
+		<br>
+		<i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
+		<hr width="250px">
 
-				<br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living
-					hell out of people. With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot
-					would have.<br><br><br>If you have any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42"><b>Here!</b></a><br><br><hr width="250px"><br>Want to add Roast-Bot to your discord server? <br><a href = "https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8" target = "_blank"><b>Invite it!</b></a></p>
+		<br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people.
+			With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot would have.<br><br><br>If you have
+			any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42"><b>Here!</b></a><br><br>
+			<hr
+			 width="250px"><br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8"
+			 target="_blank"><b>Invite it!</b></a></p><br><br><br>
+		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" width="350" height="500" allowtransparency="true"
+		 frameborder="0"></iframe>
 	</div>
 
 </body>
