--- a/Website/Info/index.html
+++ b/Website/Info/index.html
@@ -34,5 +34,9 @@
 	</nav>
 	<br><br>
 	<b><h1 style = "text-align: center">Info</h1></b>
+	<br>
+	<hr width="250px">
+	<br>
+	<p>Roast-Bot was created on Wed Jun 27 2018 02:44:49 GMT+0000 (Coordinated Universal Time).  After creating Roast-Bot and the help server, I only added roasts and a couple other essential commands. A month or so later I got more consistent about adding Roast-Bot commands, roasts, and memes.  2018-07-26 was when I first started adding more commands, and making existing commands look better.  Note: memes were not yet added as of 2018-07-26. 4 days later <code>r!roast @user</code> was added.  On 2018-08-01 memes were added to Roast-Bot and welcome-leave-log. Note: welcome-leave-log was removed in v2.0.0.  In v1.7.0 XP-System was added but due to hosting conflicts(stats would reset every time Roast-Bot was updated) it was later removed in v1.8.0.  2018-08-10 was when <code>r!say whatToSay</code> was added along with almost doubling the number of roasts. v1.9.0 introduced <code>r!urban whatToSearch</code> was finally introduced along with major source code changes. The big 2.0.0 introduced more than 50 new memes, reintroduced the XP-System that would actually record stats. After that it opened the way for other commands that store data such as prefix, feedback, custom memes, custom roasts and much more. With v2.1.0 custom prefixes and <code>r!user</code>.</p>
 	</body>
 </html>
