footer added(not done)

--- a/Website/Leaderboard/index.html
+++ b/Website/Leaderboard/index.html
@@ -11,13 +11,13 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="../../Website/Leaderboard/main.css" />
 	<script src="../../Website/Leaderboard/main.js"></script>
-	<link rel="icon" type="image/png" href="../../Website/rbtop.PNG" />
+	<link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG" />
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="index.html"><img src="../../Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="index.html"><img src="../../Website/Images/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
