--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="Website/main.css" />
-	<link rel="icon" type="image/png" href = "Website/rbtop.PNG" />
+	<link rel="icon" type="image/png" href = "Website/Images/rbtop.PNG" />
 	<script src="Website/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="index.html"><img src="Website/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
+		<a class="navbar-brand" href="index.html"><img src="Website/Images/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
 		</div>
 	</nav>
 
-	<img id="roastBotImg" src="Website/roastBotImg.PNG"><img>
+	<img id="roastBotImg" src="Website/Images/roastBotImg.PNG"><img>
 	<br><br>
 	<div id="mainText">
 
@@ -47,13 +47,31 @@
 		<br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people.
 			With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot would have.<br><br><br>If you have
 			any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42"><b>Here!</b></a><br><br>
-			<hr
-			 width="250px"><br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8"
+			<hr width="250px">
+			<br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8"
 			 target="_blank"><b>Invite it!</b></a></p><br><br><br>
 		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" width="350" height="500" allowtransparency="true"
 		 frameborder="0"></iframe>
+		<br>
+		<br>
+		<hr width = "250px">
+		<br>
+		<p>Also upvote Roast-Bot on the <a href = "https://discordbots.org/bot/461361233644355595"><b>Discord Bot List</b></a>!</p>
+		<br>
+		<a href="https://discordbots.org/bot/461361233644355595" >
+  		<img src="https://discordbots.org/api/widget/461361233644355595.svg" alt="Roast-Bot" /></a>
 	</div>
-
+	<br><br>
+	<footer>
+		<div id = "footer">
+			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
+			<div id = "images">
+				<img src = "Website/Images/github.png">
+				<img src = "Website/Images/dbl.png">
+				<img src = "Website/Images/rbtop.PNG">
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
