command help added

--- a/Website/Commands/index.html
+++ b/Website/Commands/index.html
@@ -65,5 +65,15 @@
 		<li><i>Custom Prefix</i>: If you don't like Roast-Bot's prefix(r!) you can change it to anything you want by using r!prefix <newPrefix>. To view your prefix use r!prefix. The prefix by default is r!.</li>
 		<li><i>XP-System</i>: Everytime you use a Roast-Bot command your XP increases! Use r!level to check your level and XP! Level 1: 0-9XP, Level 2: 10XP, Level 3: 15XP, Level 4: 25XP Level 5: 50XP, Level 6: 100XP, Level 7: 200XP, Level 8: 500XP, Level 9: 1,000XP, Level 10: 10,000XP.</li>
 	</ul>
+	<footer>
+		<div id = "footer">
+			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
+			<div id = "images">
+				<!--<img src = "Website/Images/github.png">
+				<img src = "Website/Images/dbl.png">
+				<img src = "Website/Images/rbtop.PNG"> -->
+			</div>
+		</div>
+	</footer>
 	</body>
 </html>
