--- a/Website/Leaderboard/index.html
+++ b/Website/Leaderboard/index.html
@@ -38,10 +38,8 @@
 	<hr width="250px">
 	<br>
 	<p id="main">
-		&nbsp;&nbsp;&nbsp;&nbsp;When Roast-Bot gets XP/Level stats all it gets is your user id, and the guild id. To see if you are
-		on the leaderboard you can either just use <code>r!level</code> or turn on discord developer mode, go to a message you've
-		sent and click on the same thing that you would do to edit a message. From there you should see a button called "Copy user
-		Id". Click that, paste it and compare it to the ID's listed below.
+		&nbsp;&nbsp;&nbsp;&nbsp;To see if your on the leaderboard go to the server that you use Roast-Bot commands in the most and
+		do <code>r!level</code>. Then compare your XP/Level to the ones in the table below!
 	</p>
 	<br>
 	<hr width="250px">
@@ -136,6 +134,18 @@
 	<br><br>
 	<p style="text-align: center">Want to see yourself up here? Use any command that starts with <code>r!</code> on a server
 		that has Roast-Bot in it. Get high enough level/XP to surpass anyone on this list and you'll be added!</p>
+	<footer>
+		<div id="footer">
+			<p>Roast-Bot is licensed under the <a href="https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that
+				you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me.
+				More information <a href="https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
+			<div id="images">
+				<!--<img src = "Website/Images/github.png">
+					<img src = "Website/Images/dbl.png">
+					<img src = "Website/Images/rbtop.PNG"> -->
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
