--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		<div id = "footer">
 			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
 			<div id = "images">
-				<img src = "Website/Images/github.png">
+				<!--<img src = "Website/Images/github.png">
 				<img src = "Website/Images/dbl.png">
-				<img src = "Website/Images/rbtop.PNG">
+				<img src = "Website/Images/rbtop.PNG"> -->
 			</div>
 		</div>
 	</footer>
