--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 		<br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people.
 			With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot would have.<br><br><br>If you have
-			any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42"><b>Here!</b></a><br><br>
+			any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42" target = "_blank"><b>Here!</b></a><br><br>
 			<hr width="250px">
-			<br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8"
+			<br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8" target = "_blank"
 			 target="_blank"><b>Invite it!</b></a></p><br><br><br>
 		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" width="350" height="500" allowtransparency="true"
 		 frameborder="0"></iframe>
@@ -56,7 +56,7 @@
 		<br>
 		<hr width = "250px">
 		<br>
-		<p>Also upvote Roast-Bot on the <a href = "https://discordbots.org/bot/461361233644355595"><b>Discord Bot List</b></a>!</p>
+		<p>Also upvote Roast-Bot on the <a href = "https://discordbots.org/bot/461361233644355595" target = "_blank"><b>Discord Bot List</b></a>!</p>
 		<br>
 		<a href="https://discordbots.org/bot/461361233644355595" >
   		<img src="https://discordbots.org/api/widget/461361233644355595.svg" alt="Roast-Bot" /></a>
@@ -64,7 +64,7 @@
 	<br><br>
 	<footer>
 		<div id = "footer">
-			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
+			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT" target = "_blank"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE" target = "_blank"><b>here</b></a>.</p>
 			<div id = "images">
 				<!--<img src = "Website/Images/github.png">
 				<img src = "Website/Images/dbl.png">
