discord wigit made scalable

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<hr width="250px">
 			<br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8" target = "_blank"
 			 target="_blank"><b>Invite it!</b></a></p><br><br><br>
-		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" width="350" height="500" allowtransparency="true"
+		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" height= "400" id = "discord_wigit" allowtransparency="true"
 		 frameborder="0"></iframe>
 		<br>
 		<br>
