--- a/Website/Leaderboard/index.html
+++ b/Website/Leaderboard/index.html
@@ -47,9 +47,7 @@
 	<table class="table">
 		<thead class="thead-dark">
 			<tr>
-				<th scope="col">#</th>
-				<th scope="col">User Id</th>
-				<th scope="col">Guild Id</th>
+				<th scope="col">Rank</th>
 				<th scope="col">XP</th>
 				<th scope="col">Level</th>
 			</tr>
@@ -57,71 +55,51 @@
 		<tbody>
 			<tr>
 				<th scope="row">1</th>
-				<td>285992069061672961</td>
-				<td>484897573946130443</td>
 				<td>1025</td>
 				<td>9</td>
 			</tr>
 			<tr>
 				<th scope="row">2</th>
-				<td>229693461492662274</td>
-				<td>316052417378648065</td>
 				<td>667</td>
 				<td>8</td>
 			</tr>
 			<tr>
 				<th scope="row">3</th>
-				<td>232716861932830720</td>
-				<td>263550317751304192</td>
 				<td>395</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
-				<td>390315922369282049</td>
-				<td>461362371139469328</td>
 				<td>388</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">5</th>
-				<td>489581331609681930</td>
-				<td>486724641520615425</td>
 				<td>336</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">6</th>
-				<td>220087681542127616</td>
-				<td>476695536465084430</td>
 				<td>209</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">7</th>
-				<td>183628360956510208</td>
-				<td>180388857169182720</td>
 				<td>208</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">8</th>
-				<td>274965301978988544</td>
-				<td>353642324699381761</td>
 				<td>204</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
-				<td>357544883621330947</td>
-				<td>353642324699381761</td>
 				<td>201</td>
 				<td>7</td>
 			</tr>
 			<tr>
 				<th scope="row">10</th>
-				<td>178875862878257152</td>
-				<td>180388857169182720</td>
 				<td>196</td>
 				<td>6</td>
 			</tr>
