--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
 		<br>
 		<i><p style="font-size: 13px;">Made by Ole113#2421</p></i><br>
 		<hr width="250px">
-
-		<br><br><br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people.
+		<br>
+		<b><span style = "font-size: 30px">Want to add Roast-Bot to your discord server?</span></b><br><br><a style = "font-size: 20px" href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8" target = "_blank" target="_blank"><b>Invite it!</b></a></p><br>
+		<br><p>Roast-Bot was made with two things in mind, to make people laugh; and to roast the living hell out of people.
 			With this in mind Roast-Bot will unlikely have commands that a "multi-purpose" bot would have.<br><br><br>If you have
 			any questions or feedback join the Roast-Bot help server <a href="https://discordapp.com/invite/9y8yV42" target = "_blank"><b>Here!</b></a><br><br>
 			<hr width="250px">
-			<br>Want to add Roast-Bot to your discord server? <br><a href="https://discordapp.com/oauth2/authorize?client_id=461361233644355595&scope=bot&permissions=8" target = "_blank"
-			 target="_blank"><b>Invite it!</b></a></p><br><br><br>
 		<iframe src="https://discordapp.com/widget?id=461362371139469328&theme=dark" height= "400" id = "discord_wigit" allowtransparency="true"
 		 frameborder="0"></iframe>
 		<br>
@@ -58,8 +57,8 @@
 		<br>
 		<p>Also upvote Roast-Bot on the <a href = "https://discordbots.org/bot/461361233644355595" target = "_blank"><b>Discord Bot List</b></a>!</p>
 		<br>
-		<a href="https://discordbots.org/bot/461361233644355595" >
-  		<img src="https://discordbots.org/api/widget/461361233644355595.svg" alt="Roast-Bot" /></a>
+		<a target = "_blank" href="https://discordbots.org/bot/461361233644355595" >
+  		<img src="https://discordbots.org/api/widget/461361233644355595.svg" alt="Roast-Bot" id = "dbl_wigit"/></a>
 	</div>
 	<br><br>
 	<footer>
