--- a/404.html
+++ b/404.html
@@ -1,14 +1,26 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Roast-Bot</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Roast-Bot 404</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" media="screen" href="../../Website/404/main.css" />
+        <script src="../../Website/404/main.js"></script>
+        <link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG"/>
+        <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    </head>
 <body>
-    Hmm Something went wrong.
+    <br><br><br><br>
+    <h1>404: Page Not Found</h1>
+    <hr width = "250px" style = "color: #404040; opacity: 0.5">
+    <img src = "../../Website/Images/roastBotImg.PNG" alt = "roast_bot main image">
+    <br><br><br>
+    <hr width = "250px" style = "color: #404040; opacity: 0.5">
+    <br>
+    <h1>Oops it looks like your looking for something that doesn't exist :(</h1>
+    <br><br>
+    <h4>Want to go back to home? <br><br><a href = "https://ole113.github.io/Roast-Bot/">Click Here!</a></h4>
 </body>
 </html>
