--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" media="screen" href="Website/404/main.css" />
         <script src="Website/404/main.js"></script>
-        <link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG"/>
+        <link rel="icon" type="image/png" href="Website/Images/rbtop.PNG"/>
         <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     </head>
 <body>
