some release notes added to info

--- a/Website/Info/index.html
+++ b/Website/Info/index.html
@@ -11,7 +11,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="../../Website/Info/main.css" />
 	<script src="../../Website/Info/main.js"></script>
-	<link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG"/>
+	<link rel="icon" type="image/png" href="../../Website/Images/rbtop.PNG" />
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 </head>
 
@@ -19,7 +19,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="index.html"><img src="../../Website/Images/rbtop.PNG" style="width: 35px">&nbsp;&nbsp;&nbsp;Roast-Bot</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
-			aria-expanded="false" aria-label="Toggle navigation">
+		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -33,7 +33,7 @@
 		</div>
 	</nav>
 	<br><br>
-	<b><h1 style = "text-align: center">Info</h1></b>
+	<b><h1 style="text-align: center">Info</h1></b>
 	<br>
 	<hr width="250px">
 	<br>
@@ -45,20 +45,92 @@
 	<h4>Registered User Count: 1400</h4>
 	<br>
 	<hr width="250px">
-	<p id = "mainText">Roast-Bot was created on Wed Jun 27 2018 02:44:49 GMT+0000 (Coordinated Universal Time).  After creating Roast-Bot and the help server, I only added roasts and a couple other essential commands. A month or so later I got more consistent about adding Roast-Bot commands, roasts, and memes.  2018-07-26 was when I first started adding more commands, and making existing commands look better.  Note: memes were not yet added as of 2018-07-26. 4 days later <code>r!roast @user</code> was added.  On 2018-08-01 memes were added to Roast-Bot and welcome-leave-log. Note: welcome-leave-log was removed in v2.0.0.  In v1.7.0 XP-System was added but due to hosting conflicts(stats would reset every time Roast-Bot was updated) it was later removed in v1.8.0.  2018-08-10 was when <code>r!say whatToSay</code> was added along with almost doubling the number of roasts. v1.9.0 introduced <code>r!urban whatToSearch</code> was finally introduced along with major source code changes. The big 2.0.0 introduced more than 50 new memes, reintroduced the XP-System that would actually record stats. After that it opened the way for other commands that store data such as prefix, feedback, custom memes, custom roasts and much more. With v2.1.0 custom prefixes and <code>r!user</code>.</p>
 	<br>
-	<hr width = "250px">
+	<p id="rbv">Below is the realease notes of Roast-Bot starting from v1.2.0 untill the current version. These are taken directly
+		from #roast-bot-updates in the Roast-Bot Development Server.</p>
+	<div id="mainText">
+		<br>
+		<hr width="250px">
+		<br>
+		<p>2018-07-26:
+			<ul>
+				<li>Roast-Bot v1.2.0 has been released. Some news features of this release are:</li>
+				<li>welcome-leave-log feature.</li>
+				<li>All commands have RichEmbed enabled.</li>
+				<li>Various other fixes.</li>
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-07-30:
+			<ul>
+				<li>Roast-Bot v1.3.0 has been released. The new features of 1.3.0 are:</li>
+				<li>You can now roast a specific person with <code>r!roast @user</code></li>
+				<li>Custom Roast-Bot emoji in the server! :roast_square:</li>
+				<li>Lastly, <code>r!devServer</code> has been removed and has been integrated into <code>r!help</code></li>
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-08-01:
+			<ul>
+				<li>Roast-Bot v1.4.0 is now live! The new features of this update include the following:</li>
+				<li>Roast-Bot  memes are now here, use r!meme to try them out.</li>
+				<li>welcome-leave-log now includes the user displayAvatarURL of who left/joined!</li>		
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-08-03:
+			<ul>
+				<li>Roast-Bot v1.6.0 is here. Here's what's new:</li>
+				<li>r!clear NUMBER. Clear messages easily and quickly, max # of messages allowed to be cleared is 100</li>
+				<li>Have a favorite r!meme or r!roast that you want to show a friend? Both commands now show what number of roast/meme it is, to show a friend it just use r!meme #1 or r!roast #1 to show the #1 roast!</li>
+				<li>Another Roast-Bot custom emoji!</li>
+				<li>Bug fixes and other multiple command looks updates</li>
+			</ul>
+			For more information send me a DM or ask in #roast-bot-help.
+		</p>
+		<br>
+		<br>
+		<p>2018-08-07:
+			<ul>
+				<li>Roast-Bot v1.7.0 is live! The new features of this release are:</li>
+				<li>r!level, Roast-Bot now has a XP-System, the XP-System only increases your XP when you use a Roast-Bot command! No need to worry about it interfering with other bots XP-Systems.  There are 10 levels. Every time you use a Roast-Bot command your XP increases by 1.  The XP required for each is documented below:</li>
+						<br>
+						Level 1: 0-9XP<br>
+						Level 2: 10XP<br>
+						Level 3: 15XP<br>
+						Level 4: 25XP<br>
+						Level 5: 50XP<br>
+						Level 6: 100XP<br>
+						Level 7: 200XP<br>
+						Level 8: 500XP<br>
+						Level 9: 1,000XP<br>
+						Level 10: 10,000XP<br>
+						<br>
+				<li>Please be aware that r!level is in a Beta stage(Some features may change or be reworked). The XP system was made with Enmap, https://www.npmjs.com/package/enmap enjoy!</li>
+				<li>For more information send me a DM or ask in #roast-bot-help.</li>
+			</ul>
+		</p>
+	</div>
 	<br>
-	<p>Roast-Bot versions starting from the earliest recorded version v1.2.0.</p>
+	<br>
 	<footer>
-		<div id = "footer">
-			<p>Roast-Bot is licensed under the <a href = "https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me. More information <a href = "https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
-			<div id = "images">
+		<div id="footer">
+			<p>Roast-Bot is licensed under the <a href="https://opensource.org/licenses/MIT"><b>MIT</b></a> license which means that
+				you can modify, distribute, and sublicense any of Roast-Bots code but must include the license and give credit to me.
+				More information <a href="https://github.com/Ole113/Roast-Bot/blob/master/LICENSE"><b>here</b></a>.</p>
+			<div id="images">
 				<!--<img src = "Website/Images/github.png">
 				<img src = "Website/Images/dbl.png">
 				<img src = "Website/Images/rbtop.PNG"> -->
 			</div>
 		</div>
-	</footer>	
+	</footer>
 </body>
+
 </html>
